Fix visit link label spacing in combined card (#25660)

--- a/client/blocks/reader-combined-card/style.scss
+++ b/client/blocks/reader-combined-card/style.scss
@@ -191,10 +191,6 @@
 .reader-combined-card .reader-visit-link {
 	margin-left: 0;
 	margin-right: 26px;
-
-	.reader-visit-link__label {
-		margin-left: -4px;
-	}
 }
 
 .reader-combined-card .reader-visit-link,
